--- a/industry-healhcare.html
+++ b/industry-healhcare.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>Индустрия Fashion</title>
+		<title>Индустрия Healhcare</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1683498425118">
+		<link rel="stylesheet" href="./css/main.css?v=1683510062938">
 	</head>
 	<body>
 		<!-- Header-->
@@ -193,15 +193,16 @@
 			<section class="section-hero section-hero--industry">
 				<div class="container">
 					<div class="section-hero__content">
-						<h1 class="section-hero__title"><span class="text-weight-light">Индустрия</span>
-							Fashion
+						<h1 class="section-hero__title"><span class="text-weight-light-desktop display-block-mobile">Индустрия</span>
+							Healhcare
 						</h1>
-						<p class="section-hero__text">Major Terminal помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок</p><img class="section-hero__bg" src="images/section-hero/bg6.jpg" alt>
+						<p class="section-hero__text">Major Terminal помогает своим клиентам полный цикл услуг по обработке, хранению и дистрибуции в индустрии Healthcare</p><img class="section-hero__bg" src="images/section-hero/bg6.jpg" alt>
 					</div>
+					<p class="section-hero__text section-hero__text--mobile">Major Terminal помогает своим клиентам полный цикл услуг по обработке, хранению и дистрибуции в индустрии Healthcare</p>
 				</div>
 			</section>
 			<!-- Section Success-->
-			<div class="section-success container">
+			<div class="section-success section-success--mobile-two-col container">
 				<div class="section-success__grid">
 					<div class="section-success__elem">
 						<p class="section-success__value">5 млн</p>
@@ -212,12 +213,12 @@
 						<p class="section-success__text">Приемка (штук) / год</p>
 					</div>
 					<div class="section-success__elem">
-						<p class="section-success__value">400 тыс</p>
-						<p class="section-success__text">Восстановление качества</p>
+						<p class="section-success__value">от -25 ° до +25 °</p>
+						<p class="section-success__text">Температурное хранение</p>
 					</div>
 					<div class="section-success__elem">
-						<p class="section-success__value">15 млн</p>
-						<p class="section-success__text">Стикеров (штук) / год</p>
+						<p class="section-success__value">3650 м2</p>
+						<p class="section-success__text">Зоны температурного хранения</p>
 					</div>
 				</div>
 			</div>
@@ -227,65 +228,70 @@
 					<h2 class="h2 section-service-range__title">
 						Учитываем
 						<span class="text-red">все</span>
-						особенности<br>индустрии Fashion
+						особенности<br>индустрии Healthcare
 					</h2>
 					<div class="links-row section-service-range__links">
-						<p class="links-row__link">Организация забора товара</p>
-						<p class="links-row__link">Предпродажная подготовка</p>
-						<p class="links-row__link">Таможенный склад</p>
-						<p class="links-row__link">Срок оказания услуг</p>
+						<p class="links-row__link">Контроль и соблюдение холодовой цепи</p>
+						<p class="links-row__link">Упаковочные решения для термолабильной продукции</p>
+						<p class="links-row__link">Организация возвратной логистики</p>
+						<p class="links-row__link">Контроль остаточных сроков годности</p>
 					</div>
 				</div>
 				<!-- Section Partner-->
-				<div class="section-partner section-partner--blue container">
+				<div class="section-partner section-partner--bg-blue container">
 					<div class="section-partner__box">
 						<div class="section-partner__nav-row">
 							<ul class="section-partner__link-list">
-								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Услуги</a></li>
+								<li class="section-partner__link-elem"><a class="section-partner__link section-partner__link--active" href="#">Услуги</a></li>
 								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Таможенный склад</a></li>
 								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Предпродажная подготовка</a></li>
 								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Дистрибуция</a></li>
 							</ul>
-							<div class="dropdown dropdown--navigate section-partner__dropdown">
+							<div class="dropdown dropdown--text-blue dropdown--navigate section-partner__dropdown">
 								<div class="dropdown__value-box">
-									<input class="dropdown__value" type="text" value="4PL оператор" disabled>
+									<input class="dropdown__value" type="text" value="Услуги" disabled>
 									<svg class="dropdown__arrow">
 										<use xlink:href="#chevron-dropdown"></use>
 									</svg>
 								</div>
 								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="4PL оператор">4PL оператор</li>
-									<li class="dropdown__option" data-value="#">Логопарк</li>
-									<li class="dropdown__option" data-value="#">О Major Terminal</li>
-									<li class="dropdown__option" data-value="#">Ценности</li>
+									<li class="dropdown__option dropdown__option--selected" data-value="#">Услуги</li>
+									<li class="dropdown__option" data-value="#">Таможенный склад</li>
+									<li class="dropdown__option" data-value="#">Предпродажная подготовка</li>
+									<li class="dropdown__option" data-value="#">Дистрибуция</li>
 								</ul>
 							</div>
 						</div>
 						<div class="section-partner__content section-partner__content--with-lists">
-							<div class="section-partner__col">
-								<div class="section-partner__list-arrow-block">
-									<ul class="list-arrow list-arrow--red-arrow">
-										<li class="list-arrow__elem">Разгрузка, приемка, контроль качества</li>
-										<li class="list-arrow__elem">Сортировка товаров по группам и категория</li>
-										<li class="list-arrow__elem">Подбор и отгрузка по FIFO, FEFO, лотам, партиям</li>
-										<li class="list-arrow__elem">Возвратная логистика</li>
-									</ul>
-									<ul class="list-arrow list-arrow--red-arrow">
-										<li class="list-arrow__elem">Кросс-докинг</li>
-										<li class="list-arrow__elem">Выбраковка</li>
-										<li class="list-arrow__elem">Восстановление качества</li>
-										<li class="list-arrow__elem">Маркировка</li>
-									</ul>
-								</div><a class="button button--outline-blue button--md section-partner__button" href="#">Оставить заявку</a>
+							<div class="section-partner__row">
+								<div class="section-partner__col section-partner__col--content">
+									<div class="section-partner__list-arrow-block">
+										<ul class="list-arrow list-arrow--red-arrow">
+											<li class="list-arrow__elem">Разгрузка, приемка, контроль качества</li>
+											<li class="list-arrow__elem">Сортировка товаров по группам и категория</li>
+											<li class="list-arrow__elem">Подбор и отгрузка по FIFO, FEFO, лотам, партиям</li>
+											<li class="list-arrow__elem">Возвратная логистика</li>
+										</ul>
+										<ul class="list-arrow list-arrow--red-arrow">
+											<li class="list-arrow__elem">Кросс-докинг</li>
+											<li class="list-arrow__elem">Выбраковка</li>
+											<li class="list-arrow__elem">Восстановление качества</li>
+											<li class="list-arrow__elem">Маркировка</li>
+										</ul>
+									</div><a class="button button--outline-blue button--md section-partner__button" href="#">Оставить заявку</a>
+								</div>
+								<div class="section-partner__col section-partner__col--img"><img class="section-partner__image" src="images/section-partner/img1.svg" alt></div>
 							</div>
-							<div class="section-partner__col"><img class="section-partner__image" src="images/section-partner/img1.svg" alt></div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- Section Description-->
 			<section class="section-description container">
-				<h2 class="h2 section-description__title">Опции и преимущества</h2>
+				<h2 class="h2 section-description__title">
+					Опции и
+					<br class="hide-desktop">преимущества
+				</h2>
 				<div class="swiper section-description__panel-slider">
 					<div class="section-description__panel-grid swiper-wrapper">
 						<!-- Panel-->
@@ -296,18 +302,18 @@
 							</div><img class="section-description__panel-img" src="images/section-description/img1.png" alt>
 						</article>
 						<!-- Panel-->
-						<article class="section-description__panel swiper-slide"><img class="section-description__panel-img" src="images/section-description/img2.svg" alt>
+						<article class="section-description__panel section-description__panel--image-left swiper-slide">
 							<div class="section-description__panel-content">
 								<h3 class="section-description__panel-title">Интеграция с WMS системой</h3>
 								<p class="section-description__panel-text">Система управления складом Major собственной разработки. Команда разработчиков и поддержки WMS в режиме 24/7.</p><a class="section-description__panel-link" href="#">Узнать подробнее</a>
-							</div>
+							</div><img class="section-description__panel-img" src="images/section-description/img2.svg" alt>
 						</article>
 						<!-- Panel-->
-						<article class="section-description__panel swiper-slide"><img class="section-description__panel-img" src="images/section-description/img3.svg" alt>
+						<article class="section-description__panel section-description__panel--image-left swiper-slide">
 							<div class="section-description__panel-content">
 								<h3 class="section-description__panel-title">Служба качества</h3>
 								<p class="section-description__panel-text">Система управления складом Major собственной разработки. Команда разработчиков и поддержки WMS в режиме 24/7.</p><a class="section-description__panel-link" href="#">Узнать подробнее</a>
-							</div>
+							</div><img class="section-description__panel-img" src="images/section-description/img3.svg" alt>
 						</article>
 						<!-- Panel-->
 						<article class="section-description__panel swiper-slide">
@@ -318,7 +324,7 @@
 						</article>
 					</div>
 				</div>
-				<div class="slider__nav hide-desktop">
+				<div class="slider__nav slider__nav--panel hide-desktop">
 					<button class="slider__btn slider__btn--prev" aria-label="Назад">
 						<svg class="slider__btn-arrow">
 							<use xlink:href="images/svg-sprite/svg-sprite-static.svg#chevron-slider"></use>
@@ -334,18 +340,33 @@
 				<p class="section-description__text-block"><strong>Major Terminal</strong>
 					помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок, отвечающие растущим запросам потребителей и высоким ожиданиям от бренда. Мы предлагаем широкий ассортимент высококачественных логистических услуг в сфере красоты и люкса, от многоканального выполнения заказов до глобальных транспортных или пере упаковочных решений, адаптированных к рынкам предметов роскоши, что позволяет брендам отражать свой имидж и выполнять обязательства перед людьми и экологией в своей цепочке поставок.
 				</p>
-				<div class="section-description__photo-grid">
-					<div class="section-description__photo-box"><img class="section-description__photo-img" src="images/section-slider/slide1.jpg" alt>
-						<button class="section-description__photo-play-button">
-							<svg class="section-description__photo-play-icon">
-								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#play"></use>
-							</svg>
-						</button>
+				<div class="section-description__photo-slider swiper">
+					<div class="section-description__photo-grid swiper-wrapper">
+						<div class="section-description__photo-box swiper-slide"><img class="section-description__photo-img" src="images/section-slider/slide1.jpg" alt>
+							<button class="section-description__photo-play-button">
+								<svg class="section-description__photo-play-icon">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#play"></use>
+								</svg>
+							</button>
+						</div>
+						<div class="section-description__photo-box swiper-slide"><img class="section-description__photo-img" src="images/section-slider/slide2.jpg" alt></div>
+						<div class="section-description__photo-box swiper-slide"><img class="section-description__photo-img" src="images/section-slider/slide3.jpg" alt></div>
 					</div>
-					<div class="section-description__photo-box"><img class="section-description__photo-img" src="images/section-slider/slide2.jpg" alt></div>
-					<div class="section-description__photo-box"><img class="section-description__photo-img" src="images/section-slider/slide3.jpg" alt></div>
 				</div>
-				<p class="section-description__text-block">Индустрия Fashion сталкивается с различными проблемами, такими как изменчивая мода, доступная роскошь или персонализированные покупки. Более того, ожидания потребителей меняются за счет технологий, соображений устойчивости  и новых участников рынка. Вот почему косметическим компаниям необходимо принимать во внимание транспортные и логистические аспекты, чтобы облегчить любые долгосрочные цепочки поставок и проблемы со спросом.</p>
+				<div class="slider__nav slider__nav--photo hide-desktop">
+					<button class="slider__btn slider__btn--prev" aria-label="Назад">
+						<svg class="slider__btn-arrow">
+							<use xlink:href="images/svg-sprite/svg-sprite-static.svg#chevron-slider"></use>
+						</svg>
+					</button>
+					<div class="slider__pagination"></div>
+					<button class="slider__btn slider__btn--next" aria-label="Вперед">
+						<svg class="slider__btn-arrow">
+							<use xlink:href="images/svg-sprite/svg-sprite-static.svg#chevron-slider"></use>
+						</svg>
+					</button>
+				</div>
+				<p class="section-description__text-block hide-mobile">Индустрия Fashion сталкивается с различными проблемами, такими как изменчивая мода, доступная роскошь или персонализированные покупки. Более того, ожидания потребителей меняются за счет технологий, соображений устойчивости  и новых участников рынка. Вот почему косметическим компаниям необходимо принимать во внимание транспортные и логистические аспекты, чтобы облегчить любые долгосрочные цепочки поставок и проблемы со спросом.</p>
 			</section>
 		</main>
 		<!-- Section Contacts-->
@@ -474,8 +495,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1683498425120"></script>
-		<script src="./js/main.js?v=1683498425120"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1683510062939"></script>
+		<script src="./js/main.js?v=1683510062939"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
