--- a/case-item.html
+++ b/case-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1682376928105">
+		<link rel="stylesheet" href="./css/main.css?v=1683513997378">
 	</head>
 	<body>
 		<!-- Header-->
@@ -33,11 +33,8 @@
 			<!-- Top block-->
 			<div class="header__row">
 				<div class="header__top-box container"><a class="header__logo-link header__logo-link--mobile" href="/"><img class="header__logo-img" src="images/common/logo-major-terminal.svg" alt="Major Terminal"></a>
-					<ul class="header__logo-list">
-						<li class="header__logo-list-elem"><a class="header__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="header__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
-						<li class="header__logo-list-elem"><a class="header__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="header__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
-					</ul>
-					<p class="header__text"><a class="header__phone" href="tel:84957376006">8 (495) 737 60 06</a><span class="header__text-dash">—</span>
+					<p class="header__text"><a class="header__phone" href="tel:84957376006">8 (495) 737 60 06</a>
+						<span class="header__text-dash">—</span>
 						Секретариат
 					</p>
 					<button class="header__search-button js-search-toggle" aria-label="Поиск">
@@ -62,6 +59,9 @@
 					<button class="header__burger-btn" aria-label="Мобильное меню">
 						<svg class="header__burger">
 							<use xlink:href="#burger"></use>
+						</svg>
+						<svg class="header__close">
+							<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-close"></use>
 						</svg>
 					</button>
 				</div>
@@ -122,6 +122,59 @@
 					</nav><a class="header__button-enter" href="#"><img class="header__button-enter-icon" src="images/common/logo-map.png" alt>Вход в MAP</a>
 				</div>
 			</div>
+			<div class="header__mobile-menu">
+				<div class="container header__mobile-menu-container">
+					<ul class="header__mobile-menu-list">
+						<li class="header__mobile-menu-elem">
+							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Индустрии</a>
+								<svg class="header__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg>
+							</div>
+							<ul class="header__mobile-menu-child-list">
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Fashion</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Telecom</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Helthcare</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Автомотив</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">POSM маркетинг</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">FMCG</a></li>
+							</ul>
+						</li>
+						<li class="header__mobile-menu-elem">
+							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Услуги</a>
+								<svg class="header__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg>
+							</div>
+							<ul class="header__mobile-menu-child-list">
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Ответственное хранение</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Фулфилмент</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Кросс-докинг</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Таможенный склад</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Упаковка</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Копакинг</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Еще услуга</a></li>
+							</ul>
+						</li>
+						<li class="header__mobile-menu-elem">
+							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Major Terminal</a>
+								<svg class="header__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg>
+							</div>
+							<ul class="header__mobile-menu-child-list">
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">О нас</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Кейсы</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Пресс-релизы</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши склады</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Контакты</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Преимущества</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши вакансии</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</header>
 		<main>
 			<!-- Breadcrumbs-->
@@ -150,7 +203,7 @@
 				<!-- Panel-->
 				<div class="section-case-item__panel">
 					<h3 class="section-case-item__panel-title">Задача</h3>
-					<ul class="list-arrow list-arrow--blue section-case-item__panel-list">
+					<ul class="list-arrow list-arrow--blue-arrow section-case-item__panel-list">
 						<li class="list-arrow__elem">Реализовать интеграцию с транспортными компаниями</li>
 						<li class="list-arrow__elem">Упростить документооборот</li>
 					</ul>
@@ -158,7 +211,7 @@
 				<!-- Panel-->
 				<div class="section-case-item__panel">
 					<h3 class="section-case-item__panel-title">Сложности</h3>
-					<ul class="list-arrow list-arrow--blue section-case-item__panel-list">
+					<ul class="list-arrow list-arrow--blue-arrow section-case-item__panel-list">
 						<li class="list-arrow__elem">Большое количество договор с разными транспортными компаниями</li>
 						<li class="list-arrow__elem">Административные расходы на обработку процесса со стороны клиента</li>
 						<li class="list-arrow__elem">Невозможность формирования накладных и прочих документов</li>
@@ -284,6 +337,10 @@
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">POSM маркетинг</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">FMCG</a></li>
 						</ul>
+						<ul class="footer__logo-list footer__logo-list--desktop">
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
+						</ul>
 					</div>
 					<!-- Nav col-->
 					<div class="footer__col">
@@ -315,20 +372,26 @@
 					</div>
 					<!-- Contact col-->
 					<div class="footer__col"><a class="footer__logo-link" href="/"><img class="footer__logo" src="images/common/logo-major-terminal.svg" alt="Major"></a>
-						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">
-								8 (495) 737 60 06
-								<span class="footer__link-hide-mobile">— Секретариат</span></a><a class="footer__link" href="mailto:info@major-terminal.ru">info@major-terminal.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
-						<p class="footer__text">Мы в социальных сетях</p>
-						<ul class="footer__social social">
-							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
-									<svg class="social__link-icon">
-										<use xlink:href="#youtube"></use>
-									</svg></a></li>
-							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
-									<svg class="social__link-icon">
-										<use xlink:href="#telegram"></use>
-									</svg></a></li>
-						</ul>
+						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:info@major-terminal.ru">info@major-terminal.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
+						<div class="footer__social-box">
+							<div class="footer__social-wrapper">
+								<p class="footer__text">Мы в социальных сетях</p>
+								<ul class="footer__social social">
+									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
+											<svg class="social__link-icon">
+												<use xlink:href="#youtube"></use>
+											</svg></a></li>
+									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
+											<svg class="social__link-icon">
+												<use xlink:href="#telegram"></use>
+											</svg></a></li>
+								</ul>
+							</div>
+							<ul class="footer__logo-list footer__logo-list--mobile">
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<!-- Copyright-->
@@ -341,13 +404,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1682376928106"></script>
-		<script src="./js/main.js?v=1682376928106"></script><svg width="0" height="0" class="hidden">
-	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="burger">
-		<rect width="24" height="5.71429" fill="currentColor"></rect>
-		<rect y="9.14258" width="24" height="5.71429" fill="currentColor"></rect>
-		<rect y="18.2861" width="24" height="5.71429" fill="currentColor"></rect>
-	</symbol>
+		<script src="./js/vendor.js?v=1683513997379"></script>
+		<script src="./js/main.js?v=1683513997379"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
@@ -369,17 +427,14 @@
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path fill-rule="evenodd" clip-rule="evenodd" d="M35.7203 20.1875C35.8872 19.6587 35.7203 19.2744 34.982 19.2744H32.5272C31.908 19.2744 31.622 19.6109 31.4552 19.9709C31.4552 19.9709 30.1923 23.0459 28.4289 25.0395C27.857 25.6161 27.595 25.8083 27.2852 25.8083C27.1183 25.8083 26.9036 25.6161 26.9036 25.0878V20.1627C26.9036 19.5383 26.7133 19.25 26.1887 19.25H22.3281C21.9466 19.25 21.7084 19.5383 21.7084 19.8266C21.7084 20.427 22.5902 20.5714 22.6853 22.2528V25.9062C22.6853 26.6989 22.5447 26.8438 22.2325 26.8438C21.3986 26.8438 19.3731 23.7448 18.1581 20.2137C17.9219 19.5144 17.6819 19.25 17.0622 19.25H14.5839C13.8691 19.25 13.75 19.5861 13.75 19.9466C13.75 20.5953 14.5839 23.862 17.6341 28.1858C19.6595 31.1389 22.5428 32.7261 25.1402 32.7261C26.7133 32.7261 26.9036 32.3656 26.9036 31.7652V29.5311C26.9036 28.8106 27.0466 28.6906 27.5472 28.6906C27.9044 28.6906 28.548 28.8823 30.0016 30.2998C31.6694 31.9813 31.9553 32.75 32.8848 32.75H35.3392C36.0541 32.75 36.3878 32.3895 36.197 31.693C35.9828 30.9964 35.1723 29.9877 34.1238 28.7867C33.5519 28.1145 32.6941 27.3697 32.432 27.0092C32.0748 26.5287 32.17 26.3366 32.432 25.9044C32.4081 25.9044 35.4109 21.6284 35.7203 20.1856" fill="white"></path>
 	</symbol>
-	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" id="youtube">
-		<g clip-path="url(#clip0_1902_2023)">
-			<path d="M8.96094 20.28H10.4209V27.5H11.8209V20.28H13.2809V19.06H8.96094V20.28ZM16.3409 26C16.1009 26.28 15.2809 26.84 15.2809 26.04V21.26H14.0409V26.48C14.0409 28.06 15.6209 27.64 16.3609 26.82V27.5H17.6009V21.26H16.3609V26H16.3409ZM20.9609 21.22C20.2409 21.22 19.7809 21.76 19.7809 21.76V19.04H18.5209V27.5H19.7809V27.02C19.7809 27.02 20.2009 27.58 20.9609 27.58C21.6209 27.58 22.1209 27 22.1209 26.2V22.74C22.1209 21.8 21.6809 21.22 20.9609 21.22ZM20.8209 26.04C20.8209 26.5 20.5009 26.72 20.0809 26.54C19.9675 26.487 19.8656 26.4123 19.7809 26.32V22.44C19.8609 22.36 19.9609 22.3 20.0409 22.24C20.4809 22.02 20.8209 22.36 20.8209 22.82V26.04ZM25.4409 25.72C25.4409 26.2 25.1809 26.52 24.8809 26.54C24.5609 26.56 24.2409 26.3 24.2409 25.72V24.54H26.6209V22.94C26.6271 22.6964 26.5842 22.454 26.4949 22.2273C26.4055 22.0005 26.2716 21.794 26.1009 21.62C25.7569 21.3062 25.3066 21.1346 24.8409 21.14C24.4009 21.14 23.9409 21.28 23.5809 21.56C23.2009 21.86 22.9609 22.32 22.9609 22.94V25.74C22.9609 26.3 23.1409 26.74 23.4209 27.06C23.7609 27.42 24.2209 27.62 24.7009 27.64C25.2809 27.66 25.9009 27.42 26.2609 26.92C26.4809 26.62 26.6209 26.22 26.6209 25.74V25.42H25.4409V25.72ZM24.2409 22.94C24.2409 22.6 24.4409 22.2 24.8209 22.2C25.2009 22.2 25.4409 22.56 25.4409 22.94V23.58H24.2409V22.94Z" fill="currentColor"></path>
-			<path d="M17.9414 2.78016e-08C15.5775 0.000131314 13.2367 0.465871 11.0528 1.37063C8.86887 2.27538 6.88452 3.60144 5.21307 5.27308C3.54162 6.94472 2.21578 8.92921 1.31127 11.1132C0.406754 13.2973 -0.058725 15.6381 -0.0585937 18.002C-0.0584624 20.3659 0.407277 22.7067 1.31203 24.8906C2.21679 27.0745 3.54284 29.0589 5.21448 30.7303C6.88612 32.4018 8.87061 33.7276 11.0546 34.6321C13.2387 35.5367 15.5795 36.0021 17.9434 36.002C22.7176 36.0017 27.2961 34.105 30.6717 30.7289C34.0474 27.3529 35.9437 22.7742 35.9434 18C35.9431 13.2258 34.0464 8.64732 30.6703 5.27166C27.2943 1.89601 22.7156 -0.000265118 17.9414 2.78016e-08ZM21.1014 6.74H22.7014V12.1C22.7014 12.44 22.8614 12.44 22.9214 12.44C23.1614 12.44 23.5214 12.18 23.7014 12V6.72H25.3014V13.8H23.7014V13.18C23.4814 13.38 23.2614 13.54 23.0414 13.66C22.7414 13.82 22.4614 13.88 22.1814 13.88C22.0281 13.8873 21.8751 13.8607 21.7333 13.8019C21.5915 13.7431 21.4645 13.6537 21.3614 13.54C21.1814 13.32 21.1014 12.98 21.1014 12.56V6.74ZM16.0014 8.6C16.0014 7.5 16.9014 6.6 18.0014 6.6C19.1014 6.6 20.0014 7.5 20.0014 8.6V12C20.0014 13.1 19.1014 14 18.0014 14C16.9014 14 16.0014 13.1 16.0014 12V8.6ZM11.8414 4.3L12.8014 7.82L13.7814 4.3H15.6014L13.7214 9.86V13.8H11.9414V9.86L10.0214 4.3H11.8414ZM27.6414 29.38C26.6214 30.38 17.9814 30.4 17.9814 30.4C17.9814 30.4 9.36141 30.38 8.32141 29.38C7.30141 28.38 7.30141 23.4 7.30141 23.36C7.30141 23.34 7.30141 18.36 8.32141 17.34C9.34141 16.34 17.9814 16.32 17.9814 16.32C17.9814 16.32 26.6014 16.34 27.6414 17.34C28.6614 18.34 28.6814 23.32 28.6814 23.36C28.6814 23.36 28.6814 28.36 27.6414 29.38Z" fill="currentColor"></path>
-			<path d="M17.9605 12.6999C18.3005 12.6999 18.4605 12.4999 18.4805 12.1799V8.3799C18.4805 8.1199 18.2205 7.8999 17.9805 7.8999C17.7405 7.8999 17.4805 8.0999 17.4805 8.3799V12.1799C17.4805 12.4799 17.6205 12.6799 17.9605 12.6999Z" fill="currentColor"></path>
-		</g>
-		<defs>
-			<clipPath id="clip0_1902_2023">
-				<rect width="36" height="36" fill="white"></rect>
-			</clipPath>
-		</defs>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="youtube">
+		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
+		<path d="M34.543 20.498C35 22.28 35 26 35 26C35 26 35 29.72 34.543 31.502C34.289 32.487 33.546 33.262 32.605 33.524C30.896 34 25 34 25 34C25 34 19.107 34 17.395 33.524C16.45 33.258 15.708 32.484 15.457 31.502C15 29.72 15 26 15 26C15 26 15 22.28 15.457 20.498C15.711 19.513 16.454 18.738 17.395 18.476C19.107 18 25 18 25 18C25 18 30.896 18 32.605 18.476C33.55 18.742 34.292 19.516 34.543 20.498ZM23 29.5L29 26L23 22.5V29.5Z" fill="white"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="burger">
+		<rect width="24" height="5.71429" fill="currentColor"></rect>
+		<rect y="9.14258" width="24" height="5.71429" fill="currentColor"></rect>
+		<rect y="18.2861" width="24" height="5.71429" fill="currentColor"></rect>
 	</symbol>
 </svg>
 <img class="hidden" src="images/svg-sprite/svg-sprite-static.svg" alt>
