--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1683513999108">
+		<link rel="stylesheet" href="./css/main.css?v=1683514073336">
 	</head>
 	<body>
 		<!-- Header-->
@@ -194,8 +194,8 @@
 					<li class="list-arrow__elem"><a href="press-item.html" target="_blank">Карточка пресс-релиза // + моб версия</a></li>
 					<li class="list-arrow__elem"><a href="career.html" target="_blank">Карьера // + моб версия</a></li>
 					<li class="list-arrow__elem"><a href="career-item.html" target="_blank">Карточка вакансии // + моб версия</a></li>
-					<li class="list-arrow__elem"><a href="department.html" target="_blank">Отдел службы качества</a></li>
-					<li class="list-arrow__elem"><a href="protection.html" target="_blank">Охрана труда</a></li>
+					<li class="list-arrow__elem"><a href="department.html" target="_blank">Отдел службы качества // + моб версия</a></li>
+					<li class="list-arrow__elem"><a href="protection.html" target="_blank">Охрана труда // + моб версия</a></li>
 					<li class="list-arrow__elem"><a href="terminals.html" target="_blank">Наши терминалы // + моб версия</a></li>
 				</ul>
 			</section>
@@ -326,8 +326,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1683513999109"></script>
-		<script src="./js/main.js?v=1683513999109"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1683514073337"></script>
+		<script src="./js/main.js?v=1683514073337"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
