--- a/career-item.html
+++ b/career-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1683514337814">
+		<link rel="stylesheet" href="./css/main.css?v=1685627560633">
 	</head>
 	<body>
 		<!-- Header-->
@@ -248,18 +248,18 @@
 								<div class="section-contacts__form-row">
 									<div class="section-contacts__form-col section-contacts__form-col--inputs">
 										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input" type="text" name="name" placeholder="Имя"/>
+											<input class="form-control section-contacts__form-input section-contacts__form-input--name" type="text" name="name" placeholder="*Имя"/>
 										</div>
 										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input" type="tel" name="phone" placeholder="*Телефон"/>
+											<input class="form-control section-contacts__form-input section-contacts__form-input--tel" type="tel" name="phone" placeholder="*Телефон"/>
 										</div>
 										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input" type="email" name="email" placeholder="*Адрес электронной почты"/>
+											<input class="form-control section-contacts__form-input section-contacts__form-input--email" type="email" name="email" placeholder="*Адрес электронной почты"/>
 										</div>
 									</div>
 									<div class="section-contacts__form-col section-contacts__form-col--message">
 										<div class="section-contacts__textarea-box">
-											<textarea class="form-control form-control--textarea section-contacts__form-textarea" name="message" placeholder="*Комментарий..."></textarea>
+											<textarea class="form-control form-control--textarea section-contacts__form-textarea section-contacts__form-textarea--comment" name="message" placeholder="*Комментарий..."></textarea>
 										</div>
 									</div>
 								</div>
@@ -273,6 +273,7 @@
 										<label class="section-contacts__form-upload-label" for="upload">Загрузить файл</label>
 									</div>
 								</div>
+								<p class="section-contacts__error-message">Ошибка! Заполните обязательные поля.</p>
 							</div>
 							<div class="section-contacts__form-layer section-contacts__form-layer--success">
 								<svg class="section-contacts__submitted-icon">
@@ -370,8 +371,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1683514337815"></script>
-		<script src="./js/main.js?v=1683514337815"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1685627560635"></script>
+		<script src="./js/main.js?v=1685627560635"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
