--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1685627560374">
+		<link rel="stylesheet" href="./css/main.css?v=1685643373207">
 	</head>
 	<body>
 		<!-- Header-->
@@ -441,22 +441,54 @@
 					<!-- Content-->
 					<div class="section-about__tab-content section-about__tab-content--no-top-padding tabs__content" id="content3">
 						<div class="section-about__timeline section-about-timeline">
-							<div class="section-about-timeline__box container show-more">
-								<div class="section-about-timeline__marker section-about-timeline__marker--red section-about-timeline__marker--n1"><img class="section-about-timeline__img" src="images/section-about/photo.jpg" alt>
+							<div class="section-about-timeline__box show-more"><img class="section-about-timeline__road" src="images/section-about/timeline-road.svg" alt>
+								<div class="section-about-timeline__marker section-about-timeline__marker--red section-about-timeline__marker--n1">
 									<p class="section-about-timeline__value">2004</p>
-									<p class="section-about-timeline__text">Образование компании<br>Major Terminal</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Образование компании<br>Major Terminal</p><img class="section-about-timeline__img" src="images/section-about/photo.jpg" alt>
 								</div>
 								<div class="section-about-timeline__marker section-about-timeline__marker--n2">
-									<p class="section-about-timeline__value">2007</p>
-									<p class="section-about-timeline__text">Открытие склада “М9”<br>(МО д.Михалково)</p>
+									<p class="section-about-timeline__value">2006</p>
+									<p class="section-about-timeline__text">Запуск работ по индустриям<br>Telecom и Fashion (г. Москва)</p>
 								</div>
 								<div class="section-about-timeline__marker section-about-timeline__marker--n3">
-									<p class="section-about-timeline__value">2008</p>
-									<p class="section-about-timeline__text">Открытие склада “Истра”<br>(г.Истра) и запуск сети региональных<br>складов</p>
+									<p class="section-about-timeline__value">2007</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Открытие склада "М9"<br>(МО, д. Михалково).<br><br>Запуск работ по индустрии<br>POSM (г. Москва)</p>
 								</div>
 								<div class="section-about-timeline__marker section-about-timeline__marker--n4 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2008</p>
+									<p class="section-about-timeline__text">Открытие склада "Истра" (г. Истра).<br>Запуск сети региональных складов</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n5 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2009</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Запуск работ по индустрии<br>Helthcare (г. Москва)</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n6 show-more__mobile-hide-flex">
 									<p class="section-about-timeline__value">2011</p>
-									<p class="section-about-timeline__text">Открытие склада<br>“Парнас” (СПБ)</p>
+									<p class="section-about-timeline__text">Открытие склада "Парнас" (г. Санкт-Петербург)<br>Запуск работ по индустрии Automotive</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n7 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2015</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Запуск проекта производственной<br>логистики Shell (г. Торжок)</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n8 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2016</p>
+									<p class="section-about-timeline__text">Введение в эксплуатацию<br>первого собственного склада<br>ПС1 (МО, с. Павловская Слобода)</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n9 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2017</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Запуск проекта производственной<br>логистики Continental (г. Калуга).<br><br>Запуск проекта IPO Nissan, г. Санкт-Петербург<br><br>Запуск работы по индустрии FMCG (г. Москва)</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n10 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2018</p>
+									<p class="section-about-timeline__text">Введение в эксплуатацию второго<br>собственного склада ПС2<br>(МО, с. Павловская Слобода).</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n11 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2019</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Запуск проекта Икеа ECOM<br>(г. Санкт-Петербург)</p>
+								</div>
+								<div class="section-about-timeline__marker section-about-timeline__marker--n12 show-more__mobile-hide-flex">
+									<p class="section-about-timeline__value">2022</p>
+									<p class="section-about-timeline__text section-about-timeline__text--line-top">Введение в эксплуатацию третьего<br>собственного склада ПС3<br>(МО, с. Павловская Слобода)</p>
 								</div>
 								<button class="button button--outline-blue button--md show-more__button">Показать еще</button>
 							</div>
@@ -660,8 +692,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1685627560375"></script>
-		<script src="./js/main.js?v=1685627560375"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1685643373208"></script>
+		<script src="./js/main.js?v=1685643373208"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
