--- a/case-list.html
+++ b/case-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1685643374368">
+		<link rel="stylesheet" href="./css/main.css?v=1685706215105">
 	</head>
 	<body>
 		<!-- Header-->
@@ -196,6 +196,7 @@
 					<p class="section-case-list__description section-case-list__description--mobile">Всего найдено: 145</p>
 					<div class="section-case-list__dropdown-row">
 						<div class="dropdown dropdown--gray-border dropdown--multi-select section-case-list__dropdown">
+							<input class="dropdown__multi-input" type="text">
 							<div class="dropdown__value-box">
 								<div class="dropdown__value">Индустрии<span class="dropdown__value-counter">0</span></div>
 								<svg class="dropdown__arrow">
@@ -463,8 +464,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1685643374369"></script>
-		<script src="./js/main.js?v=1685643374369"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1685706215106"></script>
+		<script src="./js/main.js?v=1685706215106"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
